--- a/admin-gui/src/main/webapp/jsf/consumers/editConsumer.xhtml
+++ b/admin-gui/src/main/webapp/jsf/consumers/editConsumer.xhtml
@@ -62,6 +62,10 @@
    <td>
       <h:inputText id="wsdl" size="70" value="#{consumer.wsdl}"/>
       <h:message styleClass="portlet-msg-error" for="wsdl"/>
+       <h:panelGroup rendered="#{consumer.loadbalancing}">
+           <br/>
+           <h:outputLabel value="Effective WSDL URL: #{consumer.effectiveWSDL}"/>
+       </h:panelGroup>
    </td>
 </tr>
 <c:if test="#{consumer.localInfoPresent}">
